--- a/tp1-deploy.yml
+++ b/tp1-deploy.yml
@@ -1,5 +1,5 @@
 - name: TP1 Deploy
-  hosts: victim
+  hosts: dev
 
   roles:
   - docker
@@ -17,6 +17,7 @@
     git:
       repo: https://github.com/cdufour/tp1-correction.git
       dest: tp1
+      force: yes
 
   - name: Start app
     command:
@@ -26,8 +27,10 @@
 
   - name: Permissions
     file:
-      path: scripts/create-table.sh
+      path: tp1/scripts/create-table.sh
       mode: 'u+x'
 
   - name: Create table citation
-    shell: cd tp1; /usr/bin/sh scripts/create-table.sh
+    shell: cd tp1; sleep 10; /usr/bin/sh scripts/create-table.sh
+    tags:
+    - create-table # ansible-playbook tp1-deploy.yml -i inventory.txt --tags create-table
